prusti-tests/tests/verify_overflow/ui/core_proof/Counterexamples/integer.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/integer.rs:7:11
  |
7 | #[ensures(a == Int::new(5))]
  |           ^^^^^^^^^^^^^^^^
  |
note: the error originates here
 --> $DIR/integer.rs:8:1
  |
8 | fn test1(a: Int) {}
  | ^^^^^^^^^^^^^^^^^^^
note: counterexample for "a"
       value:   2
 --> $DIR/integer.rs:8:10
  |
8 | fn test1(a: Int) {}
  |          ^
note: counterexample for "result"
       value:   ()
 --> $DIR/integer.rs:8:18
  |
8 | fn test1(a: Int) {}
  |                  ^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/integer.rs:10:11
   |
10 | #[ensures(!result)]
   |           ^^^^^^^
   |
note: the error originates here
  --> $DIR/integer.rs:11:1
   |
11 | / fn test2(a: Int, b: Int) -> bool{
12 | |     let c = a + b;
13 | |     c == Int::new(30)
14 | | }
   | |_^
note: counterexample for "a"
       value:   21238
  --> $DIR/integer.rs:11:10
   |
11 | fn test2(a: Int, b: Int) -> bool{
   |          ^
note: counterexample for "b"
       value:   -21208
  --> $DIR/integer.rs:11:18
   |
11 | fn test2(a: Int, b: Int) -> bool{
   |                  ^
note: counterexample for "c"
       value:   30
  --> $DIR/integer.rs:12:13
   |
12 |     let c = a + b;
   |             ^^^^^
note: counterexample for "c"
       value:   30
  --> $DIR/integer.rs:13:5
   |
13 |     c == Int::new(30)
   |     ^
note: counterexample for "result"
       value:   true
  --> $DIR/integer.rs:13:5
   |
13 |     c == Int::new(30)
   |     ^^^^^^^^^^^^^^^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/integer.rs:19:37
   |
19 | fn test3(a: Int, b: Int, c: Int) -> bool {
   |                                     ^^^^
   |
note: the error originates here
  --> $DIR/integer.rs:19:1
   |
19 | / fn test3(a: Int, b: Int, c: Int) -> bool {
20 | |     a + c >= b + c
21 | | }
   | |_^
note: counterexample for "a"
       value:   10
  --> $DIR/integer.rs:19:10
   |
19 | fn test3(a: Int, b: Int, c: Int) -> bool {
   |          ^
note: counterexample for "b"
       value:   0
  --> $DIR/integer.rs:19:18
   |
19 | fn test3(a: Int, b: Int, c: Int) -> bool {
   |                  ^
note: counterexample for "c"
       value:   11
  --> $DIR/integer.rs:19:26
   |
19 | fn test3(a: Int, b: Int, c: Int) -> bool {
   |                          ^
note: counterexample for "result"
       value:   false
  --> $DIR/integer.rs:20:5
   |
20 |     a + c >= b + c
   |     ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

